CRUD Operation completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=CRUD_Operation_MongoDB
+
+
+spring.data.mongodb.uri=mongodb://localhost:27017/book_crud
+spring.data.mongodb.database=book_crud
